--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,20 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>com.thoughtworks.xstream</groupId>
+	  <artifactId>xstream</artifactId>
+	  <version>1.3.1</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>javaapp7</finalName>
+    <plugins>
+    	<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-war-plugin</artifactId>
+		  <version>3.4.0</version>
+		</plugin>
+    </plugins>
   </build>
 </project>
